grammar

<program> ::= { <function> | <function-prototype> | <declaration> }

<function> ::= <type> <id> "(" { <type> <id> } ")" "{" { <block-item> } "}"

<function-prototype> ::= <type> <id> "(" { <type> <id> } ")" ";"

<declaration> ::= <type> <id> [ "=" <expression> ] ";"

<block-item> ::= <statement> | <declaration>

<statement> ::= "return" <expression> ";"
              | "if" "(" <expression> ")" <statement> [ "else" <statement> ]
              | "for"
              | "while"
              | "do"
              | "break" ";"
              | "continue" ";"
              | <expression> ";"
              | ";"
              | "{" { <block-item> } "}"

<expression> ::=

<term> ::=

<factor> ::= <int>
           | <id>
           | <unary-op> <factor>
           | "(" <expression> ")"

<unary-op> ::= "-" | "~" | "!"

<id> ::= <char> | <char> { <char> <digit> "_" }

<type> ::= <int>

<int> ::= <digit> | <digit> { <digit> }

<char> ::= a | b | c ... x | y | z

<digit> ::= 0 | 1 | 2 | 3 |4 | 5 | 6 | 7 | 8 | 9 
